@@ -22,6 +22,7 @@
 
 EXTRA_DIST = disable-selinux.patch\
              install_rivendell.sh\
+             install_rivendell_devel.sh\
              qt_plugins_3.3rc\
              qtrc
 
