@@ -49,7 +49,7 @@ Bootstrap script for installing Rivendell on an RHEL 6 system.
 rm -rf $RPM_BUILD_ROOT
 mkdir -p $RPM_BUILD_ROOT/root
 cp centos6/install_rivendell.sh $RPM_BUILD_ROOT/root/
-#cp centos6/install_rivendell_devel.sh $RPM_BUILD_ROOT/root/
+cp centos6/install_rivendell_devel.sh $RPM_BUILD_ROOT/root/
 
 mkdir -p $RPM_BUILD_ROOT%{_datadir}/rivendell-install
 cp centos6/disable-selinux.patch $RPM_BUILD_ROOT%{_datadir}/rivendell-install/
@@ -75,7 +75,7 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-,root,root)
 /root/install_rivendell.sh
-#/root/install_rivendell_devel.sh
+/root/install_rivendell_devel.sh
 %{_datadir}/rivendell-install/*
 
 
